[project]
name = "srch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.1",
    "llama-index-core>=0.14.13",
    "llama-index-readers-file>=0.5.6",
    "typer",
]

[project.scripts]
srch = "src.srch:main"
