[project]
name = "know"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.1",
    "llama-index-core>=0.14.13",
    "llama-index-readers-file>=0.5.6",
    "bm25s>=0.1.10",
    "PyStemmer>=2.2.0",
    "typer",
]


[project.scripts]
know = "src.know:main"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
